[tool.poetry]
name = "dsbot"
version = "0.1.0"
description = "Desert Storm Discord Bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
discord.py = "2.3.2"
python-dotenv = "1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"